// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppTitle> matches snapshot and accept a classname 1`] = `
<h1
  className="app-title yo"
>
  toto
</h1>
`;

exports[`<AppTitle> matches snapshot and be a h1 1`] = `
<h1
  className="app-title"
>
  toto
</h1>
`;
